# zero2prod

./: Cargo.toml  Dockerfile  spec.yaml
.github/workflows/: audit.yml  general.yml
.sqlx/: query-07d2db934aba131531e3a2dd5db383032feb0ee3a64715223c89abaedc132d0b.json  query-21ba2576fba33bd4f45f7663a49405355c3b3915724a18a74828ec53f78174d0.json  query-314f5350b198146f030a11973859e9eb191ce39953046708f3b38ad188b2bd84.json
configuration/: base.yaml  production.yaml
migrations/: 20231207012400_create_subscriptions_table.sql  20231212033543_make_status_not_null_in_subscriptions.sql  20231212034048_create_subscriptions_token_table.sql  20231227164420_seed_user.sql  20240114041824_create_newsletter_issues_table.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs
src/domain/: subscriber_email.rs
src/domains/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs  mod.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/admin/send_newsletter/: get.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
