[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Finn Lidbetter"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"


[dependencies]
actix-web = "4.4.0"
chrono = { version = "0.4.31", default-features = false, features = ["clock"] }
config = "0.13"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.193", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
reqwest = "0.11.22"
